# SplinterCellPatch

./: .gitignore  BOOTSTRAP.md  CLAUDE.md  CMakeLists.txt  README.md  library.h
src/: library.cpp  library.h
